syntax = "proto3";

package core.vault;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "core/vault/genesis.proto";
import "core/vault/vault.proto";
import "core/vault/claims.proto";

option go_package = "github.com/sonrhq/core/x/vault/types";

// Query defines the gRPC querier service.
service Query {

  // Returns parameters for the `x/vault` module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/core/params/vault";

  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {

  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

